tests/ui/suggestions/issue-97760.stderr
error[E0277]: `<impl IntoIterator as IntoIterator>::Item` doesn't implement `std::fmt::Display`
  --> $DIR/issue-97760.rs:4:19
   |
LL |         println!("{x}");
   |         ----------^^^--
   |         |         |
   |         |         `<impl IntoIterator as IntoIterator>::Item` cannot be formatted with the default formatter
   |         in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
   = help: the trait `std::fmt::Display` is not implemented for `<impl IntoIterator as IntoIterator>::Item`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
help: introduce a type parameter with a trait bound instead of using `impl Trait`
   |
LL ~ pub fn print_values<I: IntoIterator>(values: &I)
LL ~ where <I as IntoIterator>::Item: std::fmt::Display {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
